Fixed paper.js path.

--- a/move.html
+++ b/move.html
@@ -19,7 +19,7 @@
     <!-- Load Paper.js libray. 
           Notice 'src' must be the relative path of the filename.
     -->
-    <script type="text/javascript" src="../paper.js"></script>
+    <script type="text/javascript" src="paper.js"></script>
 
     <!-- Signals the start of a paperscript. 
           Notice the name of the canvas.    
