--- a/test paper.js.html
+++ b/test paper.js.html
@@ -6,7 +6,7 @@
 
   
 <!-- Load the Paper.js library -->
-  <script type="text/javascript" src="../paper.js"></script>
+  <script type="text/javascript" src="paper.js"></script>
   <!-- Define inlined PaperScript associate it with myCanvas -->
   
   <script type="text/paperscript" canvas="myCanvas">
