Added some triangle shape

--- a/path01.html
+++ b/path01.html
@@ -11,6 +11,13 @@
       myPath.add( new Point( 100, 50 ) );
       myPath.insert( 1, new Point( 30, 40 ) );
 
+	  var myPath = new Path();
+	  myPath.add(new Point(40, 115));
+	  myPath.add(new Point(80, 180));
+	  myPath.add(new Point(200, 20));
+
+	  myPath.fillColor = '#ff0000';
+	  myPath.selected = true;
     </script>
   </head>
   <body>
