Added a red check mark.

--- a/path01.html
+++ b/path01.html
@@ -18,6 +18,15 @@
 
 	  myPath.fillColor = '#ff0000';
 	  myPath.selected = true;
+	  
+	  var myPath = new Path();
+      myPath.add(new Point(40, 115));
+      myPath.add(new Point(80, 180));
+      myPath.add(new Point(200, 20));
+
+      myPath.strokeColor = '#ff0000';
+
+      myPath.strokeWidth = 10;
     </script>
   </head>
   <body>
