--- a/collision.html
+++ b/collision.html
@@ -36,47 +36,36 @@
        *  the canvas.
        */
       function onFrame(){
-        // Update the position with the speed
-        character.update();
         // Handle key-presses
-        if( Key.isDown( 'left' ) )
+        if( Key.isDown( 'left' ) ) {
           character.turnLeft();
-
-        if( Key.isDown( 'right' ) )
-          character.turnRight();
-
-        if( Key.isDown( 'up' ) )
-          character.accel();
-
-        if( Key.isDown( 'down' ) )
-          character.decel();
-
-alert( objects.length );
-// It doesn't want to stay in the loop        
-alert( 3333 );
-        for( i= 0; i < objects.length; i++ ) {
-          var block= objects[ i ];
-          var charPath= character.path;
-	  alert( i+": "+block);
-          // Does not like the following
-          //block.containsPath( charPath );
-        
-// WHY IS THIS NOT WORKING?!!!
-          if( block.containsPath( charPath ) ) {
-	  alert( "found" );
-	    //alert( character.angle );
-	    //character.angle= -character.angle;
-            //alert( character.angle );
-	    //character.update();
-            character.stop();
-
-	    break;
-	  }
-	  alert( 1111 );
-
         }
-	alert( 2222 );
-        
+
+        if( Key.isDown( 'right' ) ) {
+          character.turnRight();
+        }
+
+        if( Key.isDown( 'up' ) ) {
+          character.accel();
+        }
+
+        if( Key.isDown( 'down' ) ) {
+          character.decel();
+        }
+        var preview= character.previewChanges();
+        //alert( uneval( character ) );
+
+        var hasCollided= false;
+        for(var i= 0; i < objects.length; i++ ) {
+          if( objects[ i ].containsPath( preview ) ) {
+            character.stop();
+            hasCollided= true;
+	  }
+        }
+        preview.remove();
+        if( !hasCollided ) {
+          character.update( );
+        }
       }
 
       /**
@@ -106,6 +95,7 @@ alert( 3333 );
         var right= startX + (CHARACTER_WIDTH / 2);  // Right X-coordinate
         var speed= 0.0;                             // Starting
         var angle= NORTH;                           // Starting
+        var angleChange= 0.0;
         //END private fields
 
         //BEGIN constructor
@@ -140,59 +130,74 @@ alert( 3333 );
             return {
               x: this.xPosition,
               y: this.yPosition
-            }
+            };
           // Here we call the function with the parameters from Character
           // This will return the object with the x and y properties
           } )( startX, startY ),
           // Define turnRight as a method which rotates the character
           turnRight: function() {
-            angle+= TURN_RATE;
-            // The rotate method will rotate the lines from the path
-            myPath.rotate( TURN_RATE );
+            angleChange+= TURN_RATE;
           },
           // Define turnRight as a method which rotates the character
           turnLeft: function() {
-            angle-= TURN_RATE;
-            // Rotate will turn the lines in the path
-            myPath.rotate( -TURN_RATE );
+            angleChange-= TURN_RATE;
           },
           // Define accel as method which increases the speed
           //  but does not actually move the character.
           accel: function() {
-            if( speed + ACCELERATION < MAX_SPEED )
+            if( speed + ACCELERATION < MAX_SPEED ) {
               speed+= ACCELERATION;
+            }
           },
           // Define decel as a method which decreases the speed
           //  but does not actually move the character
           decel: function(){
-            if( speed - ACCELERATION > -MAX_SPEED )
+            if( speed - ACCELERATION > -MAX_SPEED ) {
               speed-= ACCELERATION;
+            }
           },
 
           // Define update as a method which will translate the
           //  character at his current speed
-          update: function(){
-            if( speed > 0 )
-              myPath.position+= new Point( { angle: angle, length: speed } );
-            else if( speed < 0 )
-              myPath.position-= new Point( { angle: angle, length: speed } );
+          updatei: function( oldPath ) {
+            if( angleChange !== 0.0 ) {
+              oldPath.rotate( angleChange );
+            }
+            if( speed > 0 ) {
+              oldPath.position+= new Point( { angle: angle, length: speed } );
+            } else if( speed < 0 ) {
+              oldPath.position-= new Point( { angle: angle, length: speed } );
+            }
           },
+          update: function(){
+            angle+= angleChange;
+            this.updatei( myPath );
+            angleChange= 0.0;
+          },
+
 	  speed: speed,
 	  angle: angle,
 
           path: myPath,
 
           stop: function() {
-            speed= 0.0;
+            speed= 0;
+            angleChange= 0.0;
+          },
+          previewChanges: function() {
+            //var clone= eval( uneval( this ) );
+            //var char= this.clone();
+            var newPath= myPath.clone();
+            this.updatei( newPath );
+            return newPath;
+            //return this;
           }
-        }
+        };
       }
 
       function Block( left, top, right, bottom ) {
-	var border= Path.Rectangle( 
-          new Point( left, top ), 
-          new Point( right, bottom ) 
-        );
+	var border= Path.Rectangle( new Point( left, top ), 
+                                    new Point( right, bottom ) );
 	border.closed= true;
 	border.strokeColor= 'black';
 
@@ -202,34 +207,33 @@ alert( 3333 );
           right: right,
           bottom: bottom,
           contains: function( point ) {
-            if( point.x >= left 
-             && point.x <= right 
-             && point.y >= top
-             && point.y <= bottom )
+            if( point.x >= left &&
+                point.x <= right &&
+                point.y >= top &&
+                point.y <= bottom ) {
               return true;
+            }
             return false;
           },
           containsPath: function( path  ) {
             var segmentsArray= path.segments;
-
-
-            for( i= 0; i < segmentsArray.length; i++ ) {
-	      var test= segmentsArray[i].point;
-	      var test2= this.contains( test );
-	      if( test2 )
-	        return test2
+            // BEWARE without var this references the i in onFrame()
+            for(var i= 0; i < segmentsArray.length; i++ ) {
+              if( this.contains( segmentsArray[i].point ) ) {
+	        return true;
+              }
             }
             return false;
           }
 
-        }
+        };
       }
 
       // Generate a plethora of triangles at random positions
       var objects= new Array();
-      for( i= 0; i< 3; ++i ){
-        var x=Math.floor( ( Math.random() * canvas.width ) + 1 );
-        var y=Math.floor( ( Math.random() * canvas.height ) + 1 );  
+      for( var i= 0; i< 3; ++i ){
+        var x= Math.floor( ( Math.random() * ( canvas.width - 100 ) ) + 50 );
+        var y= Math.floor( ( Math.random() * ( canvas.height - 100 ) ) + 50 );  
         objects.push( new Block( x, y, x + 50, y + 50 ) ); 
       }
 
