--- a/tank01.html
+++ b/tank01.html
@@ -102,14 +102,22 @@
         var left= startX - (CHARACTER_WIDTH / 2);   // Left X-coordinate
         var right= startX + (CHARACTER_WIDTH / 2);  // Right X-coordinate
         var speed= 0.0;                             // Starting
-        var angle= NORTH;                           // Starting
+        var angle= NORTH + 180;                           // Starting
         var angleChange= 0.0;
         //END private fields
         var myPath= new Path();
 
+
+
         //BEGIN constructor
         var img= new Raster( 'tank' );
-        img.position= view.bounds.center;
+        var newPosition= view.bounds.center;
+        newPosition.x-= img.width;
+        newPosition.y-= img.height;
+        img.position= newPosition;
+        var hitBox= Path.Rectangle( new Point( newPosition.x - ( img.width / 2 ), newPosition.y - ( img.height / 2 ) ), 
+                                  new Point( newPosition.x + ( img.width / 2 ), newPosition.y + ( img.height / 2 ) ) );
+        hitBox.strokeColor= 'black';
         //new Point( startx, starty );
         //END constructor
 
@@ -177,6 +185,7 @@
           update: function(){
             angle+= angleChange;
             this.updatei( img );
+            this.updatei( hitBox );
             angleChange= 0.0;
           },
 
@@ -192,7 +201,7 @@
           previewChanges: function() {
             //var clone= eval( uneval( this ) );
             //var char= this.clone();
-            var newPath= myPath.clone();
+            var newPath= hitBox.clone();
             this.updatei( newPath );
             return newPath;
             //return this;
@@ -205,6 +214,8 @@
                                     new Point( right, bottom ) );
 	border.closed= true;
 	border.strokeColor= 'black';
+        //border.visible= false;
+        //var img= new Raster( 'building' );
         return {
           left: left,
           top: top,
@@ -229,7 +240,6 @@
             }
             return false;
           }
-
         };
       }
 
