--- a/tank01.html
+++ b/tank01.html
@@ -15,6 +15,10 @@
   <head>
     <meta charset="utf-8" />
     <title></title>
+    <style type="text/css" media="screen">
+        canvas, img { display:block; margin:1em auto; border:1px solid black; }
+            canvas { background:url(d.jpg) }
+              </style>
 
     <!-- Load Paper.js libray. 
           Notice 'src' must be the relative path of the filename.
