--- a/tank01.html
+++ b/tank01.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8" />
     <title></title>
     <style type="text/css" media="screen">
-        canvas, img { display:block; margin:1em auto; border:1px solid black; }
+        canvas, img { display:block; margin:1em ; border:1px solid black; }
             canvas { background:url(d.jpg) }
               </style>
 
