--- a/tank01.html
+++ b/tank01.html
@@ -98,6 +98,7 @@
         var CHARACTER_WIDTH= 10;                    // Constant
         var CHARACTER_HEIGHT= 40;                   // Constant
         var NORTH= -90.0;                           // Constant
+        var FRICTION= 0.966;
 
 
         // NOTE: always surround division '/' with parantheses. VERY BAD!
@@ -122,7 +123,7 @@
         var hitBox= Path.Rectangle( new Point( newPosition.x - ( img.width / 2 ), newPosition.y - ( img.height / 2 ) ), 
                                   new Point( newPosition.x + ( img.width / 2 ), newPosition.y + ( img.height / 2 ) ) );
         hitBox.strokeColor= 'black';
-        hitBox.visible= false;
+        hitBox.visible= true;
         //new Point( startx, starty );
         //END constructor
 
@@ -182,15 +183,16 @@
               oldPath.rotate( angleChange );
             }
             if( speed > 0 ) {
-              oldPath.position+= new Point( { angle: angle, length: speed } );
+              oldPath.position+= new Point( { angle: angle, length: speed*FRICTION } );
             } else if( speed < 0 ) {
-              oldPath.position-= new Point( { angle: angle, length: speed } );
+              oldPath.position-= new Point( { angle: angle, length: speed*FRICTION } );
             }
           },
           update: function(){
             angle+= angleChange;
             this.updatei( img );
             this.updatei( hitBox );
+	    speed*=FRICTION;
             angleChange= 0.0;
           },
 
@@ -219,7 +221,7 @@
                                     new Point( right, bottom ) );
 	border.closed= true;
 	border.strokeColor= 'black';
-        border.visible= false;
+        border.visible= true;
         var img= new Raster( 'hangor' );
         img.position.x= left;
         img.position.y= top;
