Removing extra files.
Fixed errors.

--- a/demotankmusic.html
+++ b/demotankmusic.html
@@ -31,7 +31,7 @@
     -->
     <script type="text/paperscript" canvas="myCanvas">
 var music= document.getElementById(   'bmusic' );
-var musicTracks= [ "DST-AngryMod.ogg", "DST-Robotix.ogg", "DST-Synth5.ogg" ];
+var musicTracks= [ "DST-AngryMod.ogg", "DST-DXT.ogg" ];
 var currentTrack= 0;
 music.src= musicTracks[ currentTrack ];
 var counter= 0;
