--- a/bullet04.html
+++ b/bullet04.html
@@ -4,13 +4,13 @@
   Descriptio:
     Repeatly fires unlimited bullets. Bullets are deleted once they leave the screen.
 
-    Ensure that apple.bmp is in the same folder.
+    Ensure that bullet.bmp is in the same folder.
 -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-    <title>Moving apple</title>
+    <title>Bullet Range</title>
 
     <!-- Load Paper.js libray -->
     <script type="text/javascript" src="paper.js"></script>
@@ -82,7 +82,7 @@
        */
       function Bullet( position, angle, speed ) {
         // Load the image.
-        var img= new Raster( 'apple' );
+        var img= new Raster( 'bullet' );
         // Set the image position
         img.position= position;
         return {
@@ -98,8 +98,9 @@
     </script>
   </head>
   <body>
+    Fires a cluster of 4 bullets. As each bullet leaves the screen, it is deleted and a new bullet is fired to replace it.<br>
     <!-- Embed the image resource -->
-    <img style="width: 32px; height: 32px; Display: none;" alt="" src="apple.bmp" id="apple">
+    <img style="width: 32px; height: 32px; Display: none;" alt="" src="bullet.bmp" id="bullet">
     <!-- Link the canvas -->
     <canvas id="myCanvas" resize=""></canvas>
   </body>
