--- a/music01.html
+++ b/music01.html
@@ -1,5 +1,12 @@
+<!--
+  Author: Josh Gillham
+  Version: 10-188888888-12
+  Description:
+    Plays a music track
+-->
 <html>
 <head>
+<!-- Embed the music track in the file. -->
 <embed src="DST-AngryMod.ogg" autostart="true" loop="true" hidden="true">
 </head>
 </body>
