--- a/bullet02.html
+++ b/bullet02.html
@@ -1,8 +1,8 @@
 <!--
   Author: Josh Gillham
-  Version: 9-24-12
+  Version: 10-15-12
   Descriptio:
-    Draws an apple image onto the canvasi and moves it acrossed the screen.
+    Draws an bullet image onto the canvas and moves it acrossed the screen. In this example, the bullet is encapsulated with a class.
 
     Ensure that apple.bmp is in the same folder.
 -->
@@ -54,6 +54,8 @@
     </script>
   </head>
   <body>
+    Shows a bullet moving acrossed the screen. <br>
+    In this example, the bullet is encapsulated with a class.<br>
     <!-- Link the canvas -->
     <canvas id="myCanvas" resize=""></canvas>
     <!-- Embed the image resource -->
