--- a/demotankmusic.html
+++ b/demotankmusic.html
@@ -103,7 +103,7 @@
           music.src= musicTracks[ currentTrack ];
         }
         // Change tracks a second time.
-        if( counter == musicInterval ) A
+        if( counter == musicInterval ) {
           // Reset the counter.
           counter= -1;
           // Change tracks the second time.
